--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: CmdSnooper
 main: cmdsnooper\CmdSnooper
 version: 1.1.0
-api: [3.0.0-ALPHA7]
+api: [3.6.4]
 author: HotshotHD
 description: Spy on players to see what commands are being ran
 
