--- a/plugin.yml
+++ b/plugin.yml
@@ -2,3 +2,12 @@ name: CmdSnooper
 main: cmdsnooper\CmdSnooper
 version: 1.1.0
 api: 3.6.5
+author: HotshotHD
+description: Spy on players to see what commands are being ran
+
+commands:
+  snoop:
+    description: Enter snoop mode
+permissions:
+   snoop.command:
+    default: op
